# resma-cli

./: pyproject.toml
.github/workflows/: ci.yml
resma/: process_md.py
