[project]
name = "resma"
version = "0.1.0"
description = ""
authors = [
	{ name="Thiago Campos", email="commit@thigcampos.com" },
	{ name="Ivan Santiago", email="ivansantiago.junior@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
	"typer (>=0.15.1,<0.16.0)",
	"jinja2 (>=3.1.5,<4.0.0)",
	"markdown (>=3.7,<4.0)",
	"python-frontmatter (>=1.1.0,<2.0.0)",
	"toml (>=0.10.2,<0.11.0)",
]

[project.scripts]
resma = "resma.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.1"
mypy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = "tests"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR0913', 'PLR0917']

[tool.ruff.lint.isort]
default-section = "third-party"

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=resma -vv'
post_test = 'coverage html'
mypy = "mypy ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
